# qt5_template

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  config_cmake.bat  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt
src/ui/: CMakeLists.txt  mainwindow.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt
